updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,19 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 21 year old, Oregon native and devoted plant mom.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Portland, OR.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing piano, going to the gym, hiking, & DIY organization</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full time front-end web developer <br>Part time piano teacher</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Eugene, OR. (UO campus)</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've always wanted to be in the tech world. As a web developer, I can use my knowledge/creativity in areas
+        that I'm confident in using them.
+      </p>
     </section>
 
     <footer id="footer">
